--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 opacity: 0;
             }
         }
-                /* Loading Screen Styles */
+                 /* Enhanced Loading Screen */
         .loading-screen {
             position: fixed;
             top: 0;
@@ -198,16 +198,43 @@
 
         .loading-content {
             text-align: center;
+            position: relative;
+        }
+
+        .loading-content::before,
+        .loading-content::after {
+            content: '♱';
+            position: absolute;
+            font-size: 2rem;
+            color: var(--chrome-silver);
+            animation: rotateCross 4s linear infinite;
+        }
+
+        .loading-content::before {
+            left: -50px;
+            animation-delay: -2s;
+        }
+
+        .loading-content::after {
+            right: -50px;
+            animation-delay: -1s;
         }
 
         .loading-logo {
             font-family: 'UnifrakturCook', cursive;
             font-size: 4rem;
             margin-bottom: 2rem;
-            background: linear-gradient(145deg, #e0e0e0, #aaa, #f5f5f5, #888);
+            background: linear-gradient(145deg, 
+                #e0e0e0, #aaa, #f5f5f5, #888,
+                #e0e0e0, #aaa, #f5f5f5, #888
+            );
+            background-size: 200% 200%;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            animation: loadingColorCycle 2s infinite;
+            animation: loadingColorCycle 3s infinite;
+            text-shadow: 
+                0 0 20px rgba(255,255,255,0.2),
+                0 0 40px rgba(255,255,255,0.1);
         }
 
         .loading-cross {
@@ -215,15 +242,18 @@
             margin: 2rem 0;
             animation: loadingSpin 2s infinite linear;
             color: var(--chrome-silver);
+            text-shadow: 0 0 10px var(--chrome-silver);
         }
 
         .loading-bar-container {
-            width: 200px;
-            height: 2px;
+            width: 300px;
+            height: 3px;
             background: rgba(192, 192, 192, 0.1);
-            margin: 2rem 0;
+            margin: 2rem auto;
             position: relative;
             overflow: hidden;
+            border-radius: 2px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
         }
 
         .loading-bar {
@@ -233,21 +263,23 @@
             height: 100%;
             width: 0%;
             background: linear-gradient(
-                to right,
+                90deg,
                 var(--chrome-silver),
                 var(--chrome-white),
                 var(--chrome-silver)
             );
             animation: loadingProgress 2s ease-out forwards;
+            box-shadow: 0 0 15px var(--chrome-silver);
         }
 
         .loading-text {
             font-family: 'Playfair Display', serif;
             color: var(--chrome-silver);
-            font-size: 1rem;
-            letter-spacing: 3px;
+            font-size: 1.2rem;
+            letter-spacing: 5px;
             margin-top: 1rem;
             opacity: 0.8;
+            animation: pulse 1.5s infinite;
         }
 
         /* Enhanced Bullet Points Styles */
@@ -400,14 +432,44 @@
             border-top: none;
         }
 
+        /* Animations */
+        @keyframes colorShift {
+            0% {
+                background-position: 0% 50%;
+                filter: hue-rotate(0deg);
+            }
+            25% {
+                background-position: 100% 50%;
+                filter: hue-rotate(90deg);
+            }
+            50% {
+                background-position: 50% 100%;
+                filter: hue-rotate(180deg);
+            }
+            75% {
+                background-position: 50% 0%;
+                filter: hue-rotate(270deg);
+            }
+            100% {
+                background-position: 0% 50%;
+                filter: hue-rotate(360deg);
+            }
+        }
+
+        @keyframes rotateCross {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
         @keyframes loadingSpin {
             from { transform: rotate(0deg); }
             to { transform: rotate(360deg); }
         }
 
         @keyframes loadingColorCycle {
-            0% { filter: hue-rotate(0deg); }
-            100% { filter: hue-rotate(360deg); }
+            0% { background-position: 0% 50%; filter: hue-rotate(0deg); }
+            50% { background-position: 100% 50%; filter: hue-rotate(180deg); }
+            100% { background-position: 0% 50%; filter: hue-rotate(360deg); }
         }
 
         @keyframes loadingProgress {
@@ -415,17 +477,18 @@
             100% { width: 100%; }
         }
 
-        @keyframes titleColorCycle {
-            0% { filter: hue-rotate(0deg); }
-            100% { filter: hue-rotate(360deg); }
+        @keyframes pulse {
+            0%, 100% { opacity: 0.5; }
+            50% { opacity: 1; }
         }
+        
     </style>
 </head>
 <body>
     <!-- Loading Screen -->
     <div class="loading-screen" id="loadingScreen">
         <div class="loading-content">
-            <div class="loading-logo">Loading</div>
+            <div class="loading-logo">Midterm Lab Task 1</div>
             <div class="loading-cross">♱</div>
             <div class="loading-bar-container">
                 <div class="loading-bar"></div>
